fix: fixed z-index of poeple header

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -12,5 +12,5 @@
   margin-bottom: -0.3em;
   user-select: none;
   margin-left: -5px;
-  z-index: 10;
+  z-index: 5;
 }
